--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-x11proto-dri2 (1.1-1) UNRELEASED; urgency=low
+x11proto-dri2 (1.1-1) unstable; urgency=low
 
   * Initial release.
 
- -- Julien Cristau <jcristau@debian.org>  Wed, 23 Apr 2008 20:06:01 +0200
+ -- Julien Cristau <jcristau@debian.org>  Thu, 05 Jun 2008 22:14:02 +0200
