--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-dri2 (1.99.3-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tepsipakki@ubuntu.com>  Wed, 03 Dec 2008 11:04:41 +0200
+
 x11proto-dri2 (1.1-1) unstable; urgency=low
 
   * Initial release.
