--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ x11proto-dri2 (1.99.3-1) UNRELEASED; urgency=low
   * debian/rules: drop some useless code (we don't need to set CFLAGS or set
     the architecture, we don't build anything).
   * Install dri2proto.txt.
+  * debian/copyright: update copyright year.
 
  -- Timo Aaltonen <tepsipakki@ubuntu.com>  Wed, 03 Dec 2008 11:04:41 +0200
 
