--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-dri2 (1.99.3-1) UNRELEASED; urgency=low
+x11proto-dri2 (1.99.3-1) unstable; urgency=low
 
   [ Timo Aaltonen ]
   * New upstream release.
@@ -9,7 +9,7 @@ x11proto-dri2 (1.99.3-1) UNRELEASED; urgency=low
   * Install dri2proto.txt.
   * debian/copyright: update copyright year.
 
- -- Timo Aaltonen <tepsipakki@ubuntu.com>  Wed, 03 Dec 2008 11:04:41 +0200
+ -- Julien Cristau <jcristau@debian.org>  Fri, 09 Jan 2009 06:57:20 +0100
 
 x11proto-dri2 (1.1-1) unstable; urgency=low
 
