--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ x11proto-dri2 (2.0-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Add build-dep on xutils-dev >= 1:7.4+4.
+  * Install the upstream changelog.
 
  -- Julien Cristau <jcristau@debian.org>  Mon, 08 Jun 2009 16:41:48 +0200
 
