--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ x11proto-dri2 (2.0-1) UNRELEASED; urgency=low
   * Add build-dep on xutils-dev >= 1:7.4+4.
   * Install the upstream changelog.
   * Bump Standards-Version to 3.8.1.
+  * Bump dh compat to 5 to make lintian happy.
 
  -- Julien Cristau <jcristau@debian.org>  Mon, 08 Jun 2009 16:41:48 +0200
 
