--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-dri2 (2.0-1) UNRELEASED; urgency=low
+x11proto-dri2 (2.0-1) unstable; urgency=low
 
   * New upstream release.
   * Add build-dep on xutils-dev >= 1:7.4+4.
@@ -6,7 +6,7 @@ x11proto-dri2 (2.0-1) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.8.1.
   * Bump dh compat to 5 to make lintian happy.
 
- -- Julien Cristau <jcristau@debian.org>  Mon, 08 Jun 2009 16:41:48 +0200
+ -- Julien Cristau <jcristau@debian.org>  Mon, 08 Jun 2009 16:50:28 +0200
 
 x11proto-dri2 (1.99.3-1) unstable; urgency=low
 
