--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 x11proto-dri2 (2.1-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Bump Standards-Version to 3.8.2.
 
  -- Julien Cristau <jcristau@debian.org>  Fri, 19 Jun 2009 13:07:49 +0200
 
