--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ x11proto-dri2 (2.2-1) UNRELEASED; urgency=low
   [ Julien Cristau ]
   * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
     good reason.  Thanks, Colin Watson!
+  * Remove myself from Uploaders
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 09 Jan 2010 02:26:40 +0200
 
