--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-dri2 (2.2-1) UNRELEASED; urgency=low
+x11proto-dri2 (2.2-1) unstable; urgency=low
 
   [ Timo Aaltonen ]
   * New upstream release. (LP: #377090, closes: #569259)
@@ -8,7 +8,10 @@ x11proto-dri2 (2.2-1) UNRELEASED; urgency=low
     good reason.  Thanks, Colin Watson!
   * Remove myself from Uploaders
 
- -- Brice Goglin <bgoglin@debian.org>  Thu, 11 Feb 2010 13:52:42 +0100
+  [ Brice Goglin ]
+  * Add myself to Uploaders.
+
+ -- Brice Goglin <bgoglin@debian.org>  Thu, 11 Feb 2010 13:55:45 +0100
 
 x11proto-dri2 (2.1-1) unstable; urgency=low
 
