--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-dri2 (2.2-2) UNRELEASED; urgency=low
+
+  * Bump xutils-dev build dependencies to 1:7.5~1 for util-macros 1.3.0.
+
+ -- Brice Goglin <bgoglin@debian.org>  Tue, 16 Feb 2010 07:23:26 +0100
+
 x11proto-dri2 (2.2-1) unstable; urgency=low
 
   [ Timo Aaltonen ]
