--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-dri2 (2.3-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Cyril Brulebois <kibi@debian.org>  Tue, 06 Apr 2010 04:17:43 +0200
+
 x11proto-dri2 (2.2-2) unstable; urgency=low
 
   * Bump xutils-dev build dependencies to 1:7.5~1 for util-macros 1.3.0
