--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 x11proto-dri2 (2.3-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Add myself to Uploaders.
 
  -- Cyril Brulebois <kibi@debian.org>  Tue, 06 Apr 2010 04:17:43 +0200
 
