--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ x11proto-dri2 (2.3-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Add myself to Uploaders.
+  * B-D explicitly on debhelper (>= 5), which matches debian/compat.
 
  -- Cyril Brulebois <kibi@debian.org>  Tue, 06 Apr 2010 04:17:43 +0200
 
