--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-dri2 (2.3-2) UNRELEASED; urgency=low
+
+  * Remove Brice from Uploaders.
+
+ -- Julien Cristau <jcristau@debian.org>  Thu, 28 Apr 2011 14:33:38 +0200
+
 x11proto-dri2 (2.3-1) unstable; urgency=low
 
   * New upstream release.
