--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 x11proto-dri2 (2.3-2) UNRELEASED; urgency=low
 
   * Remove Brice from Uploaders.
+  * Wrap the Build-Depends control field.
 
  -- Julien Cristau <jcristau@debian.org>  Thu, 28 Apr 2011 14:33:38 +0200
 
