--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ x11proto-dri2 (2.3-2) UNRELEASED; urgency=low
 
   * Remove Brice from Uploaders.
   * Wrap the Build-Depends control field.
+  * Drop unnecessary Pre-Depends on x11-common.
 
  -- Julien Cristau <jcristau@debian.org>  Thu, 28 Apr 2011 14:33:38 +0200
 
