--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-x11proto-dri2 (2.3-2) UNRELEASED; urgency=low
+x11proto-dri2 (2.6-1) UNRELEASED; urgency=low
 
+  [ Julien Cristau ]
   * Remove Brice from Uploaders.
   * Wrap the Build-Depends control field.
   * Drop unnecessary Pre-Depends on x11-common.
 
- -- Julien Cristau <jcristau@debian.org>  Thu, 28 Apr 2011 14:33:38 +0200
+  [ Cyril Brulebois ]
+  * New upstream release.
+
+ -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2011 00:37:11 +0200
 
 x11proto-dri2 (2.3-1) unstable; urgency=low
 
