--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ x11proto-dri2 (2.6-1) UNRELEASED; urgency=low
     - Use dh-autoreconf and quilt sequences, rewrite rules file.
     - Ship dri2proto.txt through dh_install.
     - Add placeholder quilt series file.
+  * Bump Standards-Version to 3.9.2 (no changes).
 
  -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2011 00:37:11 +0200
 
