--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-x11proto-dri2 (2.6-1) UNRELEASED; urgency=low
+x11proto-dri2 (2.6-1) unstable; urgency=low
 
   [ Julien Cristau ]
   * Remove Brice from Uploaders.
@@ -14,7 +14,7 @@ x11proto-dri2 (2.6-1) UNRELEASED; urgency=low
     - Add placeholder quilt series file.
   * Bump Standards-Version to 3.9.2 (no changes).
 
- -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2011 00:37:11 +0200
+ -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2011 00:46:28 +0200
 
 x11proto-dri2 (2.3-1) unstable; urgency=low
 
