--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x11proto-dri2 (2.6-2) UNRELEASED; urgency=low
+
+  * Mark x11proto-dri2-dev Multi-Arch: foreign.
+
+ -- Steve Langasek <vorlon@debian.org>  Fri, 01 Jul 2011 17:12:54 +0100
+
 x11proto-dri2 (2.6-1) unstable; urgency=low
 
   [ Julien Cristau ]
